# ai-product-pilot

./: .env.example  README.md  pyproject.toml
ai_product_pilot/: __main__.py
ai_product_pilot/api/: feedback_routes.py  routes.py
ai_product_pilot/core/: settings.py
ai_product_pilot/langgraph/: graph.py
ai_product_pilot/langgraph/nodes/: extract.py  generate.py  ingest.py  prioritize.py  synthesize.py
ai_product_pilot/lib/: supabase.py
ai_product_pilot/models/: backlog.py  feedback.py
ai_product_pilot/services/: vector_store.py
app/: main.py
app/api/: routes.py
app/langgraph/: graph.py
app/langgraph/nodes/: extract.py  generate.py  ingest.py  prioritize.py
app/services/: scoring.py  vector_store.py
migrations/: initial.sql
prompts/: extract_insights.txt  generate_stories.txt
scripts/: dev_seed.py
tests/: test_nodes.py  test_scoring.py
